2024-06-14  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/ios.pk (ios_dump_bytes): Print unknown_byte instead of
	raising E_perm.
	* testsuite/poke.cmd/dump-10.pk: Adapt accordingly.

2024-06-13  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.pk (pk_cmd_proc): Fix trimming of digits for
	zero values.

2024-06-13  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.pk (pk_cmd_nbd): New function.
	* poke/pk-cmd-ios.c (pk_cmd_nbd): Rewrite to use the Poke version.

2024-06-13  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.pk (pk_cmd_mmap): Trim long integers in handler.
	(pk_cmd_sub): Fix trimming of digits for zero values.

2024-06-13  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-diag.c (pkl_detailed_location): Remove extra empty
	line.
	(pkl_loc_to_source): Handle compilation from buffer.

2024-06-13  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.c (expr_to_ios): Emit diagnostics in all failing
	cases.
	(pk_cmd_ios): Adjust accordingly.
	(pk_cmd_close): Likewise.

2024-06-13  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.pk (pk_cmd_sub): New funtion.
	* poke/pk-cmd-ios.c (pk_cmd_sub): Rewrite to use the Poke version.

2024-06-12  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-ios.pk (pk_cmd_ios): New function.
	* poke/pk-cmd-ios.c (pk_cmd_ios): Rewrite to use the Poke version.

2024-06-12  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-misc.pk: New file.
	* poke/poke.pk: Load pk-cmd-misc.pk.
	* poke/Makefile.am (dist_app_DATA): Add pk-cmd-misc.pk.
	* poke/pk-cmd-misc.c (pk_cmd_jmd): Call to Poke version of
	pk_cmd_jmd.

2024-06-12  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-extract.pk: Rename pk-extract.pk.
	* poke/pk-cmd-diff.pk: Rename from pk-diff.pk.
	* poke/pk-cmd-copy.pk: Rename from pk-copy.pk.
	* poke/pk-cmd-dump.pk: Rename from pk-dump.pk.
	* poke/pk-cmd-scrabble.pk: Rename from pk-scrabble.pk.
	* poke/pk-cmd-save.pk: Rename from pk-save.pk.