@@ -1,3 +1,9 @@
+2024-06-15  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/pkl-tab.y (pushlevel_args): Call `assert' on
+	the result of `pkl_register_arg' function instead of the
+	whole function call expression.
+
 2024-06-14  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* pickles/ios.pk (ios_dump_bytes): Print unknown_byte instead of
